force-app/main/default/objects/Account_Related_Tracking__c/Account_Related_Tracking__c.object-meta.xml
<CustomObject>
    <label>Account Related Tracking</label>
    <nameField>
        <displayFormat>ART-{000000000}</displayFormat>
        <label>Account Related Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Related Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>