force-app/main/default/objects/Account_Related_Tracking__c/fields/Last_Client_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Client_Change_Date__c</fullName>
    <description>Captures date when last time client number was changed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Client Change Date</label>
    <type>DateTime</type>
</CustomField>