force-app/main/default/objects/Account_Related_Tracking__c/fields/No_Of_Change_No_Of_Clients__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Change_No_Of_Clients__c</fullName>
    <description>Captures how many times number of clients got changed.</description>
    <label># Of Change Of No Of Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>