force-app/main/default/objects/Account_Related_Tracking__c/fields/No_of_Clients__c.field-meta.xml
<CustomField>
    <fullName>No_of_Clients__c</fullName>
    <description>Calculates total number of clients - on Reseller Account (Based on Sold By and Referred By)</description>
    <label># of Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>