force-app/main/default/objects/Account_Related_Tracking__c/fields/Q_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Q_Tracking__c</fullName>
    <description>Tracks current Q</description>
    <label>Q Tracking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>