force-app/main/default/objects/Account_Related_Tracking__c/fields/Unique_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Account_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Unique Account Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>